İndirim Tamamlandı ve Sipariş Eklendi

--- a/IsubuBurada/IsubuBurada.IndirimService/appsettings.json
+++ b/IsubuBurada/IsubuBurada.IndirimService/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=localhost;Port=5432;Database=indirimDb;User Id=sa;Password=123456"
+    "Default": "Server=localhost;Port=5432;Database=IndirimDb;User Id=sa;Password=123456"
   }
 }
