Siparis APİ güncellendi

--- a/IsubuBurada/IsubuBurada.Siparis.Api/appsettings.json
+++ b/IsubuBurada/IsubuBurada.Siparis.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=localhost,1434;Database=SiparisTestDb;User Id=siparisDbUser;Password=123456;TrustServerCertificate=True"
+  }
 }
