--- a/IsubuBurada/IsubuBurada.Siparis.Application/IsubuBurada.Siparis.Application.csproj
+++ b/IsubuBurada/IsubuBurada.Siparis.Application/IsubuBurada.Siparis.Application.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\IsubuBurada.Siparis.Persistence\IsubuBurada.Siparis.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
