--- a/IsubuBurada/IsubuBurada.Siparis.Application/IsubuBurada.Siparis.Application.csproj
+++ b/IsubuBurada/IsubuBurada.Siparis.Application/IsubuBurada.Siparis.Application.csproj
@@ -7,10 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MassTransit" Version="8.2.2" />
     <PackageReference Include="MediatR" Version="12.2.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\IsubuBurada.Shared\IsubuBurada.Shared.csproj" />
     <ProjectReference Include="..\IsubuBurada.Siparis.Persistence\IsubuBurada.Siparis.Persistence.csproj" />
   </ItemGroup>
 
