--- a/IsubuBurada/IsubuBurada.WebUi/IsubuBurada.WebUi.csproj
+++ b/IsubuBurada/IsubuBurada.WebUi/IsubuBurada.WebUi.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="IdentityModel.AspNetCore" Version="4.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.5" />
     <PackageReference Include="Microsoft.IdentityModel.Protocols" Version="7.5.2" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
   </ItemGroup>
 
 </Project>
